--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "chai": "^4.1.1",
     "ethereumjs-testrpc": "^4.1.1",
+    "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-ejs": "^4.1.0",
+    "koa-router": "^7.2.1",
     "mocha": "^3.5.0",
     "solc": "^0.4.16",
     "web3": "^1.0.0-beta.18"
