--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a solidity contract to pool funds for token presales",
   "directories": {},
   "scripts": {
-    "test": "mocha --reporter list --timeout 30000"
+    "test": "mocha --reporter list --timeout 30000",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
