--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "8.4.0"
   },
   "scripts": {
+    "postinstall": "node build.js",
     "test": "mocha --reporter list --timeout 30000",
     "start": "node server.js"
   },
