--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "ethereumjs-testrpc": "^4.1.1",
     "mocha": "^3.5.0",
     "solc": "^0.4.16",
-    "web3": "^1.0.0-beta.18"
+    "web3": "1.0.0-beta.22"
   }
 }
