--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bignumber.js": "^5.0.0",
+    "bignumber.js": "5.0.0",
+    "ethereumjs-testrpc": "4.1.3",
+    "solc": "0.4.19",
+    "web3": "1.0.0-beta.22",
     "chai": "^4.1.1",
     "chai-bignumber": "^2.0.2",
-    "ethereumjs-testrpc": "^4.1.1",
-    "mocha": "^3.5.0",
-    "solc": "^0.4.16",
-    "web3": "1.0.0-beta.22"
+    "mocha": "^3.5.0"
   }
 }
